--- a/templates/base.html
+++ b/templates/base.html
@@ -99,7 +99,7 @@
                 class="nav-link {% if request.path == url_for('appointments') %}active{% endif %}"
                 href="{{ url_for('appointments') }}"
               >
-                <i class="fas fa-calendar-alt me-1"></i> Appointments
+                <i class="fa-solid fa-calendar-days me-1"></i> Appointments
               </a>
             </li>
             <li class="nav-item">
@@ -169,7 +169,7 @@
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
               >
-                <i class="fas fa-user-circle me-1"></i> {{ current_user.username
+                <i class="fa-regular fa-user me-1"></i> {{ current_user.username
                 }}
               </a>
               <ul
