changed button color to medical green     modified:   php_app/assets/js/notifications.js 	modified:   php_app/templates/layouts/app.php 	modified:   php_app/templates/partials/appointments.php     modified:   php_app/templates/partials/contacts.php 	modified:   php_app/templates/partials/dashboard.php 	modified:   php_app/templates/partials/login_form.php 	modified:   php_app/templates/partials/medications.php 	modified:   php_app/templates/partials/prescriptions.php 	new file:   php_app/templates/partials/profile.php 	modified:   php_app/templates/partials/register_form.php 	new file:   php_app/templates/partials/settings.php 	modified:   static/js/appointments.js 	modified:   static/js/contacts.js 	modified:   static/js/main.js 	modified:   static/js/medications.js 	modified:   static/js/notifications.js 	modified:   templates/appointments.html 	modified:   templates/base.html 	modified:   templates/contacts.html 	modified:   templates/index.html 	modified:   templates/login.html 	modified:   templates/medications.html 	modified:   templates/prescriptions.html 	modified:   templates/register.html

--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="h2 mb-0"><i class="fas fa-address-book me-2"></i>Emergency Contacts</h1>
-    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-contact-modal">
+    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-contact-modal" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">
         <i class="fas fa-plus me-1"></i> Add Contact
     </button>
 </div>
@@ -69,7 +69,7 @@
                     </div>
                     
                     <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-primary">Save Contact</button>
+                        <button type="submit" class="btn btn-primary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">Save Contact</button>
                     </div>
                 </form>
             </div>
