--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,7 @@
                         <div class="input-group">
                             <span class="input-group-text"><i class="fas fa-lock"></i></span>
                             <input type="password" class="form-control" id="password" name="password" required>
-                            <button class="btn btn-outline-secondary" type="button" id="toggle-password">
+                            <button class="btn btn-outline-secondary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;" type="button" id="toggle-password">
                                 <i class="fas fa-eye"></i>
                             </button>
                         </div>
@@ -43,7 +43,7 @@
                     </div>
                     
                     <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-primary btn-lg">Sign In</button>
+                        <button type="submit" class="btn btn-primary btn-lg" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">Sign In</button>
                     </div>
                 </form>
                 
