--- a/templates/medications.html
+++ b/templates/medications.html
@@ -92,7 +92,7 @@
                 <input type="time" class="form-control" name="time[]" />
                 <button
                   type="button"
-                  class="btn btn-outline-secondary"
+                  class="btn btn-outline-secondary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;"
                   id="add-time-btn"
                 >
                   <i class="fas fa-plus"></i>
@@ -115,7 +115,7 @@
           </div>
 
           <div class="d-grid gap-2">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">
               Save Medication
             </button>
           </div>
