--- a/templates/appointments.html
+++ b/templates/appointments.html
@@ -72,7 +72,7 @@
             <i class="fas fa-chevron-left"></i>
           </button>
           <h5 class="mb-0" id="current-month-year">Month Year</h5>
-          <button class="btn btn-sm btn-outline-secondary" id="next-month">
+          <button class="btn btn-sm btn-outline-secondary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;" id="next-month">
             <i class="fas fa-chevron-right"></i>
           </button>
         </div>
@@ -194,7 +194,7 @@
           </div>
 
           <div class="d-grid gap-2">
-            <button type="submit" class="btn btn-primary">
+            <button type="submit" class="btn btn-primary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">
               Save Appointment
             </button>
           </div>
@@ -245,7 +245,7 @@
         <button
           type="button"
           class="btn btn-outline-primary"
-          id="edit-appointment-btn"
+          id="edit-appointment-btn" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;"
         >
           <i class="fas fa-pencil-alt me-1"></i> Edit
         </button>
@@ -256,7 +256,7 @@
         >
           <i class="fas fa-trash me-1"></i> Delete
         </button>
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">
           Close
         </button>
       </div>
