--- a/templates/base.html
+++ b/templates/base.html
@@ -149,7 +149,7 @@
                   class="dropdown-header d-flex justify-content-between align-items-center"
                 >
                   <span>Notifications</span>
-                  <button class="btn btn-sm btn-link p-0" id="mark-all-read">
+                  <button class="btn btn-sm btn-link p-0" id="mark-all-read" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">
                     Mark all read
                   </button>
                 </div>
