--- a/templates/prescriptions.html
+++ b/templates/prescriptions.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-4">
     <h1 class="h2 mb-0"><i class="fas fa-file-medical me-2"></i>My Prescriptions</h1>
-    <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#add-prescription-modal">
+    <button class="btn btn-primary" data-bs-toggle="modal" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;" data-bs-target="#add-prescription-modal">
         <i class="fas fa-plus me-1"></i> Add Prescription
     </button>
 </div>
@@ -62,7 +62,7 @@
                     </div>
                     
                     <div class="d-grid gap-2">
-                        <button type="submit" class="btn btn-primary">Save Prescription</button>
+                        <button type="submit" class="btn btn-primary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;">Save Prescription</button>
                     </div>
                 </form>
             </div>
@@ -98,7 +98,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" style="background-color: #1a9b6c; border-color: #1a9b6c; color: white;" data-bs-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
